# dai-platform

./: .gitignore  package-lock.json  package.json  requirements.txt  vercel.json
.claude/: launch.json
api/: index.py
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/models/: chat.py  data.py  report.py  source.py  transform.py
apps/api/app/routers/: chat.py  data.py  health.py  reports.py  sources.py  transforms.py
apps/api/app/services/: ai_service.py  duckdb_service.py  ingest_service.py  report_service.py  transform_service.py
apps/web/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ChatSuggestions.tsx
apps/web/src/components/landing/: CTASection.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx
apps/web/src/components/layout/: AppShell.tsx  Navbar.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  table.tsx  tabs.tsx
apps/web/src/components/wizard/: DataTable.tsx  SchemaViewer.tsx  StepProgress.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: DashboardPage.tsx  LandingPage.tsx  NotFoundPage.tsx  PipelinePage.tsx  WizardPage.tsx
apps/web/src/stores/: chat-store.ts  dashboard-store.ts  data-store.ts  pipeline-store.ts  wizard-store.ts
data/samples/: customers.parquet  generate_sample_data.py  products.parquet  sales_orders.csv  sales_orders.parquet
(+3 files in other folders)
