[project]
name = "dai-api"
version = "0.1.0"
description = "DAI Platform API - Data & AI Intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "duckdb>=1.1.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
